<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>se.sundsvall.dept44</groupId>
        <artifactId>dept44-service-parent</artifactId>
        <version>1.9</version>
    </parent>
    <groupId>se.sundsvall</groupId>
    <artifactId>ms-byggrarchiver</artifactId>
    <version>1.1</version>
    <name>ms-byggrarchiver</name>
    <description>Application that archives documents from Byggr</description>
    <properties>
        <java.version>17</java.version>
        <generated-sources-path>${project.build.directory}/generated-sources</generated-sources-path>
        <generated-sources-java-path>src/main/java</generated-sources-java-path>

        <!-- Dependency versions -->
        <org.projectlombok.version>1.18.24</org.projectlombok.version>
        <openapi-generator-maven-plugin.version>6.0.1</openapi-generator-maven-plugin.version>
        <testcontainers.version>1.17.2</testcontainers.version>

        <!-- Pipeline properties -->
        <docker.image.name>ms-byggrarchiver</docker.image.name>
        <published.container.port.sandbox>8717</published.container.port.sandbox>
        <published.container.port.test>8718</published.container.port.test>
        <published.container.port.production>9091</published.container.port.production>
    </properties>
    <dependencies>

        <dependency>
            <groupId>se.sundsvall.dept44</groupId>
            <artifactId>dept44-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>se.sundsvall.dept44</groupId>
            <artifactId>dept44-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>3.1.6</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>se.sundsvall.dept44</groupId>
            <artifactId>dept44-common-validators</artifactId>
        </dependency>

        <dependency>
            <groupId>se.sundsvall.dept44</groupId>
            <artifactId>dept44-starter-feign</artifactId>
        </dependency>

        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-slf4j</artifactId>
            <version>11.8</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
        </dependency>

        <dependency>
            <groupId>se.sundsvall.generated-clients</groupId>
            <artifactId>arendeexport</artifactId>
            <version>1.1</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${org.projectlombok.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mariadb</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.sf.jmimemagic</groupId>
            <artifactId>jmimemagic</artifactId>
            <version>0.1.5</version>
            <exclusions>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.9</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi-generator-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>messaging-api</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/integrations/messaging-openapi.yaml</inputSpec>
                            <output>${generated-sources-path}</output>
                            <generatorName>jaxrs-spec</generatorName>
                            <generateApis>false</generateApis>
                            <configOptions>
                                <sourceFolder>${generated-sources-java-path}</sourceFolder>
                                <generateSupportingFiles>false</generateSupportingFiles>
                                <dateLibrary>java8</dateLibrary>
                                <apiPackage>generated</apiPackage>
                                <modelPackage>generated.se.sundsvall.messaging</modelPackage>
                                <openApiNullable>false</openApiNullable>
                                <generatePom>false</generatePom>
                                <useBeanValidation>false</useBeanValidation>
                                <useSwaggerAnnotations>false</useSwaggerAnnotations>
                                <interfaceOnly>true</interfaceOnly>
                            </configOptions>
                        </configuration>
                    </execution>

                    <execution>
                        <id>archive-api</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/integrations/archive-openapi.json</inputSpec>
                            <output>${generated-sources-path}</output>
                            <generatorName>jaxrs-spec</generatorName>
                            <generateApis>false</generateApis>
                            <configOptions>
                                <sourceFolder>${generated-sources-java-path}</sourceFolder>
                                <generateSupportingFiles>false</generateSupportingFiles>
                                <dateLibrary>java8</dateLibrary>
                                <apiPackage>generated</apiPackage>
                                <modelPackage>generated.se.sundsvall.archive</modelPackage>
                                <openApiNullable>false</openApiNullable>
                                <generatePom>false</generatePom>
                                <useBeanValidation>false</useBeanValidation>
                                <useSwaggerAnnotations>false</useSwaggerAnnotations>
                                <interfaceOnly>true</interfaceOnly>
                            </configOptions>
                        </configuration>
                    </execution>

                    <execution>
                        <id>fb-api</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/integrations/fb-openapi.json</inputSpec>
                            <output>${generated-sources-path}</output>
                            <generatorName>jaxrs-spec</generatorName>
                            <generateApis>false</generateApis>
                            <configOptions>
                                <sourceFolder>${generated-sources-java-path}</sourceFolder>
                                <generateSupportingFiles>false</generateSupportingFiles>
                                <dateLibrary>java8</dateLibrary>
                                <apiPackage>generated</apiPackage>
                                <modelPackage>generated.sokigo.fb</modelPackage>
                                <openApiNullable>false</openApiNullable>
                                <generatePom>false</generatePom>
                                <useBeanValidation>false</useBeanValidation>
                                <useSwaggerAnnotations>false</useSwaggerAnnotations>
                                <interfaceOnly>true</interfaceOnly>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${build-helper-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>add-generated-source</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${generated-sources-path}/${generated-sources-java-path}</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jaxb2-maven-plugin</artifactId>
                <version>2.5.0</version>
                <executions>
                    <execution>
                        <id>xsd-to-java</id>
                        <goals>
                            <goal>xjc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>${generated-sources-path}/${generated-sources-java-path}</outputDirectory>
                    <clearOutputDir>false</clearOutputDir>
                    <packageName>generated.se.sundsvall.archive.metadata</packageName>
                    <encoding>UTF-8</encoding>
                    <addGeneratedAnnotation>true</addGeneratedAnnotation>
                    <sources>
                        <source>${project.basedir}/src/main/resources/integrations/Bygglov_v2.xsd</source>
                    </sources>
                    <xjbSources>
                        <xjbSource>${project.basedir}/src/main/resources/integrations/bindings.xml</xjbSource>
                    </xjbSources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/byggrarchiver/Application*</exclude>
                        <exclude>**/util/Constants*</exclude>
                        <exclude>**/generated/**</exclude>
                    </excludes>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
